// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_DesktopThumbnails component renders correctly with media prop 1`] = `
<div
  class="Thumbnails-root-22"
  data-testid="thumbnails-root"
>
  <button
    aria-label="Scroll left"
    class="MuiButtonBase-root Thumbnails-thumbScroller-23 Thumbnails-thumbScrollerLeft-24 ThumbScrollerButton-root-32 ThumbScrollerButton-left-33"
    data-testid="thumbnail-scroller-left"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root ThumbScrollerButton-icon-35"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="Scroll right"
    class="MuiButtonBase-root Thumbnails-thumbScroller-23 Thumbnails-thumbScrollerRight-25 Thumbnails-thumbScrollerHidden-26 ThumbScrollerButton-root-32 ThumbScrollerButton-right-34"
    data-testid="thumbnail-scroller-right"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root ThumbScrollerButton-icon-35"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="Thumbnails-scroller-27"
    data-testid="thumbnail-scroller"
    style="margin-right: 0%;"
  >
    <button
      class="MuiButtonBase-root Thumbnails-thumbnail-28 Thumbnail-root-36 Thumbnail-large-39"
      data-testid="default-thumbnail"
      tabindex="0"
      type="button"
    >
      <img
        alt="Lorem ipsum 1"
        class="Media-root-43"
        src="path-to-image"
      />
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root Thumbnails-thumbnail-28 Thumbnail-root-36 Thumbnail-selected-38 Thumbnail-large-39 Thumbnail-selected-38"
      data-testid="default-thumbnail"
      tabindex="0"
      type="button"
    >
      <img
        alt="Lorem ipsum 2"
        class="Media-root-43"
        src="path-to-image"
      />
    </button>
  </div>
</div>
`;

exports[`_DesktopThumbnails component renders correctly without media prop 1`] = `
<div
  class="Thumbnails-root-1"
  data-testid="thumbnails-root"
>
  <button
    aria-label="Scroll left"
    class="MuiButtonBase-root Thumbnails-thumbScroller-2 Thumbnails-thumbScrollerLeft-3 ThumbScrollerButton-root-11 ThumbScrollerButton-left-12"
    data-testid="thumbnail-scroller-left"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root ThumbScrollerButton-icon-14"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="Scroll right"
    class="MuiButtonBase-root Thumbnails-thumbScroller-2 Thumbnails-thumbScrollerRight-4 Thumbnails-thumbScrollerHidden-5 ThumbScrollerButton-root-11 ThumbScrollerButton-right-13"
    data-testid="thumbnail-scroller-right"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root ThumbScrollerButton-icon-14"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="Thumbnails-scroller-6"
    data-testid="thumbnail-scroller"
    style="margin-right: 0%;"
  >
    <button
      class="MuiButtonBase-root Thumbnails-thumbnail-7 Thumbnail-root-15 Thumbnail-large-18"
      data-testid="default-thumbnail"
      style="background-image: url(path-to-image);"
      tabindex="0"
      type="button"
    >
      <span
        class="Thumbnail-accessibilityText-19"
      >
        test alt text 1
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root Thumbnails-thumbnail-7 Thumbnail-root-15 Thumbnail-selected-17 Thumbnail-large-18 Thumbnail-selected-17"
      data-testid="default-thumbnail"
      style="background-image: url(path-to-image);"
      tabindex="0"
      type="button"
    >
      <span
        class="Thumbnail-accessibilityText-19"
      >
        test alt text 2
      </span>
    </button>
  </div>
</div>
`;
